Fix delete confirm clipped

--- a/packages/core/src/web/app/components/dialogs/myCloud/GridFile.module.scss
+++ b/packages/core/src/web/app/components/dialogs/myCloud/GridFile.module.scss
@@ -90,3 +90,7 @@
     }
   }
 }
+
+.delete {
+  color: #faad14;
+}
